Zero commit (without changes)

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 {% extends "templates/base.html" %}
 
 {% block title %}
-    Экономический факультет - НГУ
+    Механико-математический факультет - НГУ
 {% endblock %}
 
 {% block og %}
