Полностью готов блок Обучение

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
 {% block og %}
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" /> 
+    <meta property="og:image" content="images/first.jpg" /> 
 {% endblock %}
 
 {% block layout %}
@@ -156,7 +156,222 @@
 			В&nbsp;течение первых двух курсов студенты всех направлений обучаются по&nbsp;единой программе и&nbsp;получают фундаментальное математическое образование, а&nbsp;на&nbsp;<nobr>3–4 курсах,</nobr> в&nbsp;зависимости от&nbsp;выбранной специализации, обучение ведется по&nbsp;одному из&nbsp;четырех направлений подготовки. Студент <nobr>3–4</nobr> курса проходит производственную и&nbsp;научно-исследовательскую практики на&nbsp;базе институтов СО&nbsp;РАН и&nbsp;частных компаний.
 		</div>
 		<br>
+		<div class="section__content">
+      		<div class="row practice-slider">
+        		<div class="practice-slider__item">
+          			<a href="http://www.sscc.ru/index_r.html">
+						<div class="practice-slider__img">
+							<img src="images/practice_1.png">
+						</div>
+						<div>
+							Институт вычислительной математики и&nbsp;математической геофизики СО&nbsp;РАН
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.ict.nsc.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_2.png">
+						</div>
+						<div>
+							Институт вычислительных технологий СО&nbsp;РАН
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.hydro.nsc.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_3.png">
+						</div>
+						<div>
+							Институт гидродинамики&nbsp;им. М.А. Лаврентьева СО&nbsp;РАН
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://math.nsc.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_4.jpg">
+						</div>
+						<div>
+							Институт математики&nbsp;им. С.Л. Соболева СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.iis.nsk.su">
+						<div class="practice-slider__img">
+							<img src="images/practice_5.png">
+						</div>
+						<div>
+							Институт систем информатики&nbsp;им. А.П. Ершова СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.itam.nsc.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_6.png">
+						</div>
+						<div>
+							Институт теоретической и&nbsp;прикладной механики&nbsp;им. С.А. Христиановича СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.iae.nsk.su/">
+						<div class="practice-slider__img">
+							<img src="images/practice_7.gif">
+						</div>
+						<div>
+							Институт автоматики и&nbsp;электрометрии СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.misd.ru/)">
+						<div class="practice-slider__img">
+							<img src="images/practice_8.jpg">
+						</div>
+						<div>
+							Институт горного дела&nbsp;им. Н.А. Чинакала СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.catalysis.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_9.png">
+						</div>
+						<div>
+							Институт катализа&nbsp;им. Г.К. Борескова СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.ipgg.sbras.ru/ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_10.png">
+						</div>
+						<div>
+							Институт нефтегазовой геологии и&nbsp;геофизики&nbsp;им. А.&nbsp;А.&nbsp;Трофимука СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.itp.nsc.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_11.jpg">
+						</div>
+						<div>
+							Институт теплофизики&nbsp;им. С.С. Кутателадзе СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.bionet.nsc.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_12.jpg">
+						</div>
+						<div>
+							Институт цитологии и&nbsp;генетики СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://econom.nsc.ru/ieie/">
+						<div class="practice-slider__img">
+							<img src="images/practice_13.gif">
+						</div>
+						<div>
+							Институт экономики и&nbsp;организации промышленного производства СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.inp.nsk.su/">
+						<div class="practice-slider__img">
+							<img src="images/practice_14.png">
+						</div>
+						<div>
+							Институт ядерной физики&nbsp;им. Г.И.Будкера СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.kti.nsc.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_15.jpg">
+						</div>
+						<div>
+							Конструкторско-технологический институт вычислительной техники СО&nbsp;РАН 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://centercem.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_16.png">
+						</div>
+						<div>
+							Научный центр клинической и&nbsp;экспериментальной медицины СО&nbsp;РАМН
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.excelsior.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_17.gif">
+						</div>
+						<div>
+							Excelsior 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.slb.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_18.jpg">
+						</div>
+						<div>
+							Schlumberger 
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="https://2gis.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_19.png">
+						</div>
+						<div>
+							2GIS
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="https://www.cft.ru">
+						<div class="practice-slider__img">
+							<img src="images/practice_20.png">
+						</div>
+						<div>
+							ЦФТ
+						</div>
+					</a>
+        		</div>
+				<div class="practice-slider__item">
+          			<a href="http://www.meshalkin.ru/">
+						<div class="practice-slider__img">
+							<img src="images/practice_21.jpg">
+						</div>
+						<div>
+							Новосибирский научно-исследовательский институт патологии кровообращения&nbsp;им. Е.Н. Мешалкина 
+						</div>
+					</a>
+        		</div>
+			</div>
+		</div>
 		<br>
+		<hr class="section__div">
 		<div class="subjects-image float-left">
         	<a href="images/disciplines.png" class="popup-image"><img src="images/disciplines.png" width="550" height="441" alt="Изучаемые дисциплины" class="img-fluid"></a>
         </div>
