--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
     <a href="http://www.nsu.ru" class="logo header__logo"><span class="sr-only">Новосибирский государственный Университет (НГУ)</span></a>
     <nav class="nav header__nav" role="navigation">
       <a href="#video" class="nav__link">О Факультете</a>
-      <a href="#discipline" class="nav__link">Обучение</a>
+      <a href="#study" class="nav__link">Обучение</a>
+	  <a href="#discipline" class="nav__link">Дисциплины</a>
       <a href="#works" class="nav__link">Выпускники</a>
       <a href="http://www.mmf.nsu.ru" class="nav__link">Сайт факультета</a>
     </nav>
@@ -26,7 +27,7 @@
 <section class="section first wow fadeIn" data-parallax="scroll" data-image-src="images/first.jpg">
   <div class="first__box">
     <h1 class="first__title">Механико-математический факультет</h1>
-    <div class="first__button-box"><a href="http://www.nsu.ru/abitura_bakalavriat_spetsialitet" class="button button_block text-lg">Поступить</a></div>
+    <div class="first__button-box"><a href="http://www.nsu.ru/faac1610efcc3c350c30d33ce2448484" class="button button_block text-lg">Поступить</a></div>
     <a href="#lead-section" class="first__scrolldown"></a>
   </div>
 </section>
@@ -37,15 +38,7 @@
       <div class="col-xs-12 col-xs-offset-1">
 
             <hr class="section__div">
-            <div class="text-xs-center lead-section__text">Студент механико-математического факультета учится преобразовывать свои разрозненные мысли в&nbsp;четко структурированные рассуждения, обладающие достаточной логической стройностью. Этот феномен называют «переустановкой операционной системы», в&nbsp;результате которой студент приобретает уникальный навык думать головой, а&nbsp;именно:
-                <ul style="text-align:left;margin-left:80px;">
-                    <li>самостоятельно анализировать и&nbsp;обрабатывать необходимую информацию и&nbsp;вычленять существенное из&nbsp;её&nbsp;гигантского объема, </li>
-                    <li>искать решения проблем эвристическими методами, </li>
-                    <li>чувствовать себя уверенно в&nbsp;нестандартных ситуациях, </li>
-                    <li>блестяще аргументировать свою позицию по&nbsp;любому вопросу, </li>
-                    <li>планировать, целеполагать и&nbsp;целедостигать, рефлексировать. </li>
-                </ul>
-                Этим и&nbsp;известен выпускник матфака, из-за этого его радушно принимают в&nbsp;любой профессиональной сфере.
+            <div class="text-xs-center lead-section__text">Студент механико-математического факультета учится преобразовывать свои разрозненные мысли в&nbsp;четко структурированные рассуждения, обладающие достаточной логической стройностью. <br>Этот феномен называют «переустановкой операционной системы», в&nbsp;результате которой студент приобретает уникальный навык думать головой, а&nbsp;именно:<br> самостоятельно анализировать и&nbsp;обрабатывать необходимую информацию и&nbsp;вычленять существенное из&nbsp;её&nbsp;гигантского объема, искать решения проблем эвристическими методами,  чувствовать себя уверенно в&nbsp;нестандартных ситуациях, блестяще аргументировать свою позицию по&nbsp;любому вопросу, планировать, целеполагать и&nbsp;целедостигать, рефлексировать.<br> Этим и&nbsp;известен выпускник матфака, из-за этого его радушно <br>принимают в&nbsp;любой профессиональной сфере.
             </div>
         <hr class="section__div section__div_no-margin">
 
@@ -54,7 +47,7 @@
   </div>
 </section>
 
-<section class="section video wow fadeIn" id="video" data-parallax="scroll" data-image-src="images/video.png">
+<section class="section video wow fadeIn" id="video" data-parallax="scroll" data-image-src="images/video.jpg">
   <div class="video__box">
     <a href="https://www.youtube.com/watch?v=iK3tkcLbJrg" class="video__link popup-youtube"><span class="sr-only">Посмотреть видео</span></a>
     <div class="video__title"><strong>Почему именно механико-математический факультет НГУ?</strong></div>
@@ -143,7 +136,7 @@
 
 <section class="banner wow fadeIn" data-parallax="scroll" data-image-src="images/banner.jpg"></section>
 
-<section class="section discipline wow fadeIn" id="discipline">
+<section class="section study wow fadeIn" id="study">
   <div class="container">
     <div class="section__content">
 
@@ -368,8 +361,17 @@
         		</div>
 			</div>
 		</div>
-		<br>
+	  </div>
+	</div>
+</section>
+
+<section class="section discipline wow fadeIn" id="discipline">
+  <div class="container">
+    <div class="section__content">
+        <div class="section__icon"><img src="images/subjects.png" width="80" height="80" alt="Дисциплины"></div>
+        <h2 class="section__title">Дисциплины</h2>
 		<hr class="section__div">
+		
 		<div class="subjects-image float-left">
         	<a href="images/disciplines.png" class="popup-image"><img src="images/disciplines.png" width="550" height="441" alt="Изучаемые дисциплины" class="img-fluid"></a>
         </div>
@@ -739,6 +741,7 @@
                 <div class="paycard__exams">Математика<br>Физика<br>Русский язык </div>
             </div>
         </div>
+		<div class="payment__note">Стоимость указана за 2015/2016 уч.&nbsp;год.</div>
     </div>
 </section>
 
@@ -1305,7 +1308,7 @@
         <hr class="section__div">
         <div class="section__content">
             <div class="text-xs-center text-lg">
-                <p>Среди выпускников ММФ НГУ есть как выдающиеся ученые, так и&nbsp;успешные практики: инженеры, IT-специалисты, бизнесмены, руководители наукоемких предприятий.</p>
+                <p>Среди выпускников ММФ НГУ есть как выдающиеся ученые, так и&nbsp;успешные практики: инженеры, <br>IT-специалисты, бизнесмены, руководители наукоемких предприятий.</p>
             </div>
         </div>
     </div>
@@ -1560,7 +1563,7 @@
         <a href="http://www.mmf.nsu.ru" class="button button_primary-outline button_block">Cайт факультета</a>
       </div>
       <div class="col-xs-3">
-        <a href="http://www.nsu.ru/abitura_bakalavriat_spetsialitet" class="button button_block">Поступить на ММФ</a>
+        <a href="http://www.nsu.ru/faac1610efcc3c350c30d33ce2448484" class="button button_block">Поступить на ММФ</a>
       </div>
       <div class="col-xs-2">
         <a href="https://vk.com/mmf_nsu_abitur_2016" class="action-vk">Группа для&nbsp;абитуриентов</a>
@@ -1574,7 +1577,8 @@
     <a href="http://www.nsu.ru" class="logo logo_inverse footer__logo"><span class="sr-only">Новосибирский государственный Университет (НГУ)</span></a>
     <nav class="nav nav_inverse footer__nav" role="navigation">
       <a href="#video" class="nav__link">О Факультете</a>
-      <a href="#discipline" class="nav__link">Обучение</a>
+      <a href="#study" class="nav__link">Обучение</a>
+	  <a href="#discipline" class="nav__link">Дисциплины</a>
       <a href="#works" class="nav__link">Выпускники</a>
     </nav>
   </div>
