Баллы за достижения

--- a/src/index.html
+++ b/src/index.html
@@ -751,7 +751,7 @@
         <h2 class="section__title">Олимпиады и&nbsp;индивидуальные достижения</h2>
         <hr class="section__div">
         <div class="olymp-tabpanel">
-            <a href="#olympTab1" class="olymp-tabpanel__link olymp-tabpanel__link_active">Поступление без экзаменов по&nbsp;результатам заключительного этапа Всероссийской олимпиады школьников </a><a href="#olympTab2" class="olymp-tabpanel__link">Баллы победителям<br>олимпиад<br>школьников<br>в&nbsp;<nobr>2015-2016 уч.</nobr> Году</a><a href="#olympTab3" class="olymp-tabpanel__link">Дополнительные<br>баллы<br>за&nbsp;индивидуальные<br>достижения</a>
+            <a href="#olympTab1" class="olymp-tabpanel__link olymp-tabpanel__link_active">Поступление без экзаменов по&nbsp;результатам заключительного этапа Всероссийской олимпиады школьников (за 2016 год)</a><a href="#olympTab2" class="olymp-tabpanel__link">Баллы победителям<br>олимпиад<br>школьников<br>в&nbsp;<nobr>2016-2017 уч.</nobr> Году</a><a href="#olympTab3" class="olymp-tabpanel__link">Дополнительные<br>баллы<br>за&nbsp;индивидуальные<br>достижения</a>
         </div>
         <div class="olymp-tab olymp-tab_active" id="olympTab1">
             <table class="table table-striped table-bordered olympics-subjects">
@@ -771,7 +771,7 @@
                         <td>Без экзаменов</td>
                     </tr>
                     <tr>
-                        <td>Информатика/Фиизика*</td>
+                        <td>Информатика/Физика*</td>
                         <td>Без экзаменов</td>
                     </tr>
                     <tr>
@@ -1194,12 +1194,11 @@
                     1
                   </td>
                   <td>
-                    Диплом победителя или призера четвертого (заключительного) этапа Всероссийской олимпиады школьников; диплом победителя или призера&nbsp;IV этапа всеукраинских ученических олимпиад из&nbsp;числа лиц, признанных гражданами Российской Федерации в&nbsp;соответствии
-                    с&nbsp;Федеральным конституционным законом от&nbsp;21&nbsp;марта 2014&nbsp;г. №&nbsp;
+                    Диплом победителя или призера четвертого (заключительного) этапа Всероссийской олимпиады школьников; диплом победителя или призера&nbsp;IV этапа всеукраинских ученических олимпиад из&nbsp;числа лиц, признанных гражданами Российской Федерации в&nbsp;соответствии с&nbsp;Федеральным конституционным законом от&nbsp;21&nbsp;марта 2014&nbsp;г. №&nbsp;
                     <nobr>6-ФКЗ</nobr>
                   </td>
                   <td>
-                    10&nbsp;баллов
+                    3&nbsp;балла
                   </td>
                 </tr>
                 <tr>
@@ -1207,10 +1206,10 @@
                     2
                   </td>
                   <td>
-                    Диплом победителя или призера третьего (регионального) этапа Всероссийской олимпиады школьников 2015/2016 учебного года (в&nbsp;случае, если предмет олимпиады совпадает с&nbsp;предметом одного из&nbsp;вступительных испытаний)
+                    Диплом победителя или призера третьего (регионального) этапа Всероссийской олимпиады школьников 2016/2017 учебного года (в&nbsp;случае, если предмет олимпиады совпадает с&nbsp;предметом одного из&nbsp;вступительных испытаний)
                   </td>
                   <td>
-                    5&nbsp;баллов
+                    1&nbsp;балл
                   </td>
                 </tr>
                 <tr>
@@ -1218,11 +1217,10 @@
                     3
                   </td>
                   <td>
-                    Аттестат о&nbsp;среднем общем образовании с&nbsp;отличием или аттестат о&nbsp;среднем общем образовании (среднем (полном) общем образовании), содержащий сведения о&nbsp;награждении золотой или серебряной медалью, диплом о&nbsp;среднем профессиональном
-                    образовании с&nbsp;отличием
+                    Аттестат о&nbsp;среднем общем образовании с&nbsp;отличием; аттестат о&nbsp;среднем общем образовании (среднем (полном) общем образовании) полученный до&nbsp;1&nbsp;января 2014&nbsp;г и&nbsp;содержащий сведения о&nbsp;награждении золотой или серебряной медалью; диплом о&nbsp;среднем профессиональном образовании с&nbsp;отличием
                   </td>
                   <td>
-                    7&nbsp;баллов
+                    3&nbsp;балла
                   </td>
                 </tr>
                 <tr>
@@ -1230,10 +1228,10 @@
                     4
                   </td>
                   <td>
-                    Диплом победителя или призера заключительного этапа олимпиад школьников 2015/2016 учебного года, проводимых в&nbsp;порядке, установленном Минобрнауки России
+                    Диплом первой степени заключительного этапа олимпиад школьников 2016/2017 учебного года, проводимых в&nbsp;порядке, установленном Минобрнауки России
                   </td>
                   <td>
-                    5&nbsp;баллов
+                    7&nbsp;баллов
                   </td>
                 </tr>
                 <tr>
@@ -1241,7 +1239,18 @@
                     5
                   </td>
                   <td>
-                    Диплом победителя (призера) Международной научной студенческой конференции 2015/2016 учебного года (школьная секция) (в&nbsp;случае, если тематика секции соответствует одному из&nbsp;предметов вступительных испытаний)
+                   Диплом второй степени заключительного этапа олимпиад школьников 2016/2017 учебного года, проводимых в&nbsp;порядке, установленном Минобрнауки России
+                  </td>
+                  <td>
+                    5&nbsp;балла
+                  </td>
+                </tr>
+				  <tr>
+                  <td>
+                    6
+                  </td>
+                  <td>
+                   Диплом третей степени заключительного этапа олимпиад школьников 2016/2017 учебного года, проводимых в&nbsp;порядке, установленном Минобрнауки России
                   </td>
                   <td>
                     3&nbsp;балла
@@ -1249,10 +1258,10 @@
                 </tr>
 				<tr>
                   <td>
-                   6
+                   7
                   </td>
                   <td>
-                    Диплом победителя (призера) Открытой всесибирской олимпиады по&nbsp;программированию&nbsp;им. И.В. Поттосина 2015/2016 учебного года (на&nbsp;направления подготовки, со&nbsp;вступительным испытание «Информатика»)
+                    Диплом победителя (призера) Открытой всесибирской олимпиады по&nbsp;программированию&nbsp;им. И.В. Поттосина 2016/2017 учебного года (на&nbsp;направления подготовки, со&nbsp;вступительным испытанием «Информатика»)
                   </td>
                   <td>
                     3&nbsp;балла
@@ -1260,10 +1269,32 @@
                 </tr>
 				  <tr>
                   <td>
-                  7
+                  8
                   </td>
                   <td>
-                    Аттестат об&nbsp;окончании Специализированного учебно-научного центра НГУ с&nbsp;вручением сертификата выпускника СУНЦ НГУ 2016 года с&nbsp;оценками по&nbsp;профильным предметам «4» и&nbsp;«5»
+                    Аттестат об&nbsp;окончании Специализированного учебно-научного центра НГУ с&nbsp;вручением сертификата выпускника СУНЦ НГУ 2017 года с&nbsp;оценками в&nbsp;сертификате не ниже «4» и&nbsp;«5» по&nbsp;предметам вступительных испытаний выбранного направления (специальности) 
+                  </td>
+                  <td>
+                    7&nbsp;баллов
+                  </td>
+                </tr>
+				   <tr>
+                  <td>
+                  9
+                  </td>
+                  <td>
+                    Аттестат о&nbsp;среднем образовании Высшего колледжа информатики НГУ с&nbsp;вручением сертификата выпускника ВКИ НГУ 2017 года с&nbsp;оценками в&nbsp;сертификате не&nbsp;ниже «4» и&nbsp;«5» по&nbsp;предметам вступительных испытаний выбранного направления (специальности)
+                  </td>
+                  <td>
+                    5&nbsp;баллов
+                  </td>
+                </tr>
+				   <tr>
+                  <td>
+                  10
+                  </td>
+                  <td>
+                    Диплом о&nbsp;среднем профессиональном образовании Высшего колледжа информатики НГУ с&nbsp;вручением сертификата выпускника ВКИ НГУ 2017 года с&nbsp;оценками в&nbsp;сертификате не&nbsp;ниже «4» и&nbsp;«5» по&nbsp;предметам вступительных испытаний выбранного направления (специальности)
                   </td>
                   <td>
                     5&nbsp;баллов
@@ -1271,10 +1302,10 @@
                 </tr>
 				  <tr>
                   <td>
-                   8
+                   11
                   </td>
                   <td>
-                    Диплом победителя (призера) заключительного этапа олимпиады 2015/2016 учебного года «Будущее Сибири» по&nbsp;физике (на&nbsp;направления подготовки, со&nbsp;вступительным испытанием «Физика»)
+                    Диплом победителя (призера) заключительного этапа олимпиады 2016/2017 учебного года «Будущее Сибири» по&nbsp;физике (на&nbsp;направления подготовки, со&nbsp;вступительным испытанием «Физика»)
                   </td>
                   <td>
                     10&nbsp;баллов
@@ -1282,7 +1313,7 @@
                 </tr>
 				  <tr>
                   <td>
-                   9
+                   12
                   </td>
                   <td>
                     Диплом победителя (призера) заключительного этапа Всесибирской олимпиады 2015/2016 учебного года
@@ -1293,7 +1324,7 @@
                 </tr>
               </tbody>
             </table>
-            <p class="m-t-1">Поступающему начисляется не&nbsp;более 10&nbsp;баллов суммарно за&nbsp;индивидуальные достижения, указанные в&nbsp;пунктах 1&nbsp;– 9. Баллы за&nbsp;индивидуальные достижения, перечисленные в&nbsp;п.&nbsp;4 и&nbsp;п.&nbsp;9, начисляются только в&nbsp;случае, если данные достижения дают поступающему право на&nbsp;получение особых прав (прием без экзаменов) и/или преимуществ (100&nbsp;баллов), но&nbsp;не&nbsp;используются поступающим для их&nbsp;получения.</p>
+            <p class="m-t-1">Баллы по&nbsp;пунктам 4&nbsp;— 6&nbsp;начисляются в&nbsp;случае, если предмет олимпиады совпадает с&nbsp;одним из&nbsp;предметов вступительных испытаний выбранного направления (специальности) и&nbsp;диплом не&nbsp;дает поступающему право на&nbsp;получение особых прав (прием без экзаменов) и/или преимуществ (100&nbsp;баллов). Поступающему начисляется не&nbsp;более 10&nbsp;баллов суммарно за&nbsp;индивидуальные достижения. В&nbsp;случае, если поступающий набирает более 10&nbsp;баллов, он&nbsp;сам выбирает достижения так, чтобы сумма баллов учитываемых достижений не&nbsp;превышала&nbsp;10.</p>
         </div>
       </div>
     </div>
